# hackaton-tasks

./: .gitignore  Makefile  README.md  first_realize.py  main.py  pyproject.toml  result.json  second_realize.py  third_realize.py
tests/: test_logic.py
